--- a/src/Web/Pages/Product/_productDetail.cshtml
+++ b/src/Web/Pages/Product/_productDetail.cshtml
@@ -16,6 +16,7 @@
     </div>
 
     <p class="dama-product-description mb-md-4">@Model.ProductDescription</p>
+    <small>Tempo de entrega entre @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(Web.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit))</small>
 
     @for (int i = 0; i < Model.Attributes.Count; i++)
     {
