--- a/src/Web/Pages/Basket/Checkout.cshtml
+++ b/src/Web/Pages/Basket/Checkout.cshtml
@@ -155,7 +155,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3 bg-light pt-2 mt-3 mt-sm-0" style="min-height:400px">
+        <div class="col-sm-3 bg-light pt-2 mt-3 mt-sm-0" style="min-height:450px">
             <h4>Resumo da encomenda</h4>
             <article class="row m-0">
                 <section class="col-2 p-0">Qt.</section>
@@ -173,7 +173,7 @@
                             <br />
                             @foreach (var attr in item.Attributes)
                             {
-                                <span class="dama-basket-label">@attr.Name; </span>
+                                <span class="dama-basket-label">@attr.Label: @attr.Name </span><br />
                             }
                         </section>
                         <section class="col-3 p-0">€ @item.UnitPrice.ToString("N2")</section>
@@ -197,9 +197,13 @@
             <article class="row">
                 <section class="col-12"><small>Tempo de entrega entre @Model.DeliveryTime.Min a @Model.DeliveryTime.Max @(Web.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTime.Unit))</small></section>
             </article>
-            <div class="dama-checkout-btn mb-3 float-right mt-3 mt-sm-0">
-                <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="[ Finalizar Encomenda ]" />
-            </div>
+            <article class="row">
+                <section class="col-12">
+                    <div class="dama-checkout-btn mb-3 float-right mt-3 mt-sm-0">
+                        <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="[ Finalizar Encomenda ]" />
+                    </div>
+                </section>
+            </article>
         </div>
     </div>
     <input type="hidden" asp-for="DeliveryTime.Min" />
