--- a/src/Web/Pages/Basket/Result.cshtml
+++ b/src/Web/Pages/Basket/Result.cshtml
@@ -3,14 +3,14 @@
 @{
     ViewData["Title"] = "Resultado";
 }
-<h2>Sucesso</h2>
+<h2>Obrigada!</h2>
 
 <div class="row">
     <div class="col-sm-6">
-        <p>A sua encomenda foi criada com sucesso!</p>
+        <p>A sua encomenda foi criada com <strong>Sucesso!</strong></p>
         <p>Para concluir consulte o seu email.</p>
         <br />
-        <p>Obrigado por escolher a Dama no Jornal!</p>
+        <p>Obrigado por escolher a <strong>Dama no Jornal&reg;!</strong></p>
     </div>
     <div class="col-sm-6">
         <img src="http://via.placeholder.com/300x500" alt="Dama no Jornal" />
