--- a/src/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Backoffice/Pages/Products/Create.cshtml
@@ -66,76 +66,41 @@
                 <span asp-validation-for="ProductModel.OtherPictures" class="text-danger"></span>
             </div>
         </div>
-    </div>
-    @*<div class="row">
-        <div class="col-md-8">
-            <hr />
-            <h4>Atributos do Produto</h4>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
-                            <span style="color:red">*</span>
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Code)
-                            <span style="color:red">*</span>
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
-                        </th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.ProductModel?.CatalogAttributes?.Count > 0)
-                    {
-                        for (int i = 0; i < Model.ProductModel.CatalogAttributes.Count; i++)
+        <div class="col-md-offset-2 col-md-4">
+            <h4>Categorias</h4>
+            <ul>
+                @for (int i = 0; i < Model.CatalogCategoryModel.Count; i++)
+                {
+                    <li class="parent-category">
+                        <label asp-for="CatalogCategoryModel[i].Selected">
+                            <input type="hidden" asp-for="CatalogCategoryModel[i].CategoryId" />
+                            <input type="checkbox" asp-for="CatalogCategoryModel[i].Selected" class="parent-checkbox" />
+                            @Model.CatalogCategoryModel[i].Label
+                        </label>
+
+                        @if (Model.CatalogCategoryModel[i].Childs.Count > 0)
                         {
-                            <tr>
-                                <td>
-                                    <input type="hidden" asp-for="ProductModel.CatalogAttributes[i].Id" />
-                                    <input type="hidden" asp-for="ProductModel.CatalogAttributes[i].ToRemove" class="to-remove" />
-                                    <select asp-for="ProductModel.CatalogAttributes[i].Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.CatalogAttributeType>()" class="form-control"></select>
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Type" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <input asp-for="ProductModel.CatalogAttributes[i].Code" class="form-control" />
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Code" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <input asp-for="ProductModel.CatalogAttributes[i].Name" class="form-control" />
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Name" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <input asp-for="ProductModel.CatalogAttributes[i].Price" class="form-control decimal" />
-                                    <span asp-validation-for="ProductModel.CatalogAttributes[i].Price" class="text-danger"></span>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn btn-danger remove">Remover</button>
-                                </td>
-                            </tr>
+                            <ul>
+                                @for (int j = 0; j < Model.CatalogCategoryModel[i].Childs.Count; j++)
+                                {
+                                    <li>
+                                        <label asp-for="CatalogCategoryModel[i].Childs[j].Selected">
+                                            <input type="hidden" asp-for="CatalogCategoryModel[i].Childs[j].CategoryId" />
+                                            <input type="checkbox" asp-for="CatalogCategoryModel[i].Childs[j].Selected" class="child-checkbox" />
+                                            @Model.CatalogCategoryModel[i].Childs[j].Label
+                                        </label>
+                                    </li>
+                                }
+                            </ul>
                         }
-                    }
-
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="4">
-                            <input type="submit" asp-page-handler="AddAttribute" value="Adicionar Atributo" class="btn btn-default" />
-                        </td>
-                    </tr>
-                </tfoot>
-            </table>
-
-
+                    </li>
+                }
+            </ul>
         </div>
+    </div>
+    <div class="row">
 
-    </div>*@
+    </div>
     <div class="form-group">
         <input type="submit" asp-page-handler="Save" value="Criar" class="btn btn-primary" />
     </div>
@@ -147,14 +112,13 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script>
+    <script>
         $(document).ready(function () {
-            $('.remove').on('click', function (e) {
-                e.preventDefault();
-                var tr = $(this).closest('tr');
-                tr.find('.to-remove').val(true);
-                tr.hide();
+            $('.child-checkbox').click(function () {
+                if ($(this).is(":checked")) {
+                    $(this).closest('.parent-category').find('.parent-checkbox').prop('checked', true);
+                }
             });
         });
-</script>
+    </script>
 }
