--- a/src/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Backoffice/Pages/Products/Details.cshtml
@@ -24,6 +24,21 @@
             @Html.DisplayFor(model => model.ProductModel.Description)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.CatalogCategories)
+        </dt>
+        <dd>
+            @foreach (var cat in Model.ProductModel.CatalogCategories)
+            {
+                @cat.Label
+                <br />
+                @foreach (var child in cat.Childs)
+                {
+                    @child.Label
+                    <br />
+                }
+            }
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.CatalogTypeId)
         </dt>
         <dd>
@@ -83,17 +98,17 @@
         <dd>
             @foreach (var item in Model.ProductModel.CatalogPictures)
             {
-            <div class="col-md-3">
-                <img src="@item.PictureUri" class="img-responsive" />
-                <div>
-                    @Html.DisplayNameFor(model => item.IsActive)
-                    @Html.DisplayFor(model => item.IsActive)
+                <div class="col-md-3">
+                    <img src="@item.PictureUri" class="img-responsive" />
+                    <div>
+                        @Html.DisplayNameFor(model => item.IsActive)
+                        @Html.DisplayFor(model => item.IsActive)
+                    </div>
+                    <div>
+                        @Html.DisplayNameFor(model => item.Order)
+                        @Html.DisplayFor(model => item.Order)
+                    </div>
                 </div>
-                <div>
-                    @Html.DisplayNameFor(model => item.Order)
-                    @Html.DisplayFor(model => item.Order)
-                </div>                
-            </div>
             }
         </dd>
     </dl>
@@ -107,7 +122,7 @@
                     <tr>
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
-                        </th>                       
+                        </th>
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
                         </th>
@@ -141,7 +156,7 @@
                         }
                     }
 
-                </tbody>                
+                </tbody>
             </table>
         </div>
     </div>
