--- a/src/Backoffice/Pages/Products/Index.cshtml
+++ b/src/Backoffice/Pages/Products/Index.cshtml
@@ -20,6 +20,9 @@
                 @Html.DisplayNameFor(model => model.ProductModel[0].Description)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ProductModel[0].CatalogCategories)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ProductModel[0].CatalogTypeId)
             </th>
             <th>
@@ -52,6 +55,18 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @foreach (var cat in item.CatalogCategories)
+                {
+                    @cat.Label
+                    <br />
+                    @foreach (var child in cat.Childs)
+                    {
+                        @child.Label
+                        <br />
+                    }
+                }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CatalogType.Code)
