--- a/src/Web/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/Pages/Components/Menu/Default.cshtml
@@ -14,20 +14,23 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     @foreach (var child in item.Childs)
                     {
-                        @if (!string.IsNullOrEmpty(child.TypeUri))
-                        {
+                        <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
+                            <span class="dropdown-item-text">@child.Name</span>
+                        </a>
+                        @*@if (!string.IsNullOrEmpty(child.TypeUri))
+                            {
 
-                            <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri" asp-route-type="@child.TypeUri">
-                                <span class="dropdown-item-text">@child.Name</span>
-                            </a>
-                        }
-                        else
-                        {
-                            <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
-                                <span class="dropdown-item-text">@child.Name</span>
-                            </a>
+                                <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri" asp-route-type="@child.TypeUri">
+                                    <span class="dropdown-item-text">@child.Name</span>
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
+                                    <span class="dropdown-item-text">@child.Name</span>
+                                </a>
 
-                        }
+                            }*@
 
                     }
                 </div>
@@ -61,20 +64,23 @@
                 <div class="dropdown-menu">
                     @foreach (var child in item.Childs)
                     {
-                        @if (!string.IsNullOrEmpty(child.TypeUri))
-                        {
+                        <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
+                            <span class="dropdown-item-text">@child.Name</span>
+                        </a>
+                        @*@if (!string.IsNullOrEmpty(child.TypeUri))
+                            {
 
-                            <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri" asp-route-type="@child.TypeUri">
-                                <span class="dropdown-item-text">@child.Name</span>
-                            </a>
-                        }
-                        else
-                        {
-                            <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
-                                <span class="dropdown-item-text">@child.Name</span>
-                            </a>
+                                <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri" asp-route-type="@child.TypeUri">
+                                    <span class="dropdown-item-text">@child.Name</span>
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
+                                    <span class="dropdown-item-text">@child.Name</span>
+                                </a>
 
-                        }
+                            }*@
                     }
                 </div>
             </li>
